--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,8 @@
       "@components/*": ["src/components/*"],
       "@styles/*": ["src/styles/*"],
       "@contexts/*": ["src/contexts/*"],
-      "@constants/*": ["src/constants/*"]
+      "@constants/*": ["src/constants/*"],
+      "@data/*": ["src/data/*"]
     }
   },
   "include": ["src"]
